changed setenv